--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@ function filterFunction() {
       <p><span class="glyphicon glyphicon-envelope" style="color: #4431a7;"></span> infosyncdevelopment@gmail.com</p>
     </div>
     
-      <form method="POST" action="">
+      <form method="POST" action="mail_handler.php">
       <div class="col-sm-7 slideanim">
       <div class="row">
         <div class="col-sm-6 form-group">
@@ -146,28 +146,6 @@ function filterFunction() {
         </div>
     </form> 
 
-<?php
-	if(isset($_POST['submit'])){
-		$name=$_POST['name'];
-		$email=$_POST['email'];
-		$phone=$_POST['phone'];
-		$msg=$_POST['msg'];
-
-		$to='infosyncdevelopment@gmail.com'; // Receiver Email ID, Replace with your email ID
-		$subject='Form Submission';
-		$message="Name :".$name."\n"."Phone :".$phone."\n"."Wrote the following :"."\n\n".$msg;
-		$headers="From: ".$email;
-
-		if(mail($to, $subject, $message, $headers)){
-           
- 
-			echo "<h1>Bedankt voor uw bericht!"." ".$name.", Wij nemen zo snel mogelijk contact met u op.</h1>";
-		}
-		else{
-			echo "Something went wrong!";
-		}
-	}
-?>
 <div id="wrapper2">
           <div class="media">        
             <div class="media-body">
