Stijl en kleuren aangepast

--- a/Werkwijze.html
+++ b/Werkwijze.html
@@ -169,13 +169,10 @@ function filterFunction() {
 <div class="bg-img4"></div>
   <br>   
 <div id="wrapper2"> 
-      <h22>Werkwijze</h22>
+      <h22>Communicatie</h22>
       <hr>
-       <p>Bij sync-development staat communicatie centraal, daarom werken wij met een model dat communicatie centraal zet. Eerst maken wij een afspraak waarin alle mogelijkheden worden doorgesproken, daarna wordt er door ons een voorbeeld gemaakt van hoe de website eruit zou kunnen zien d.m.v mock ups en bijbehorende documentatie, gevolgd door een tweede afspraak wat zowel telefonisch als op locatie kan. In deze tweede afspraak vragen wij voor feedback om de website 100% naar uw eisen te vormen. <br><br>
+       <p>Communicatie is voor ons zeer belangrijk, Wij doen er dan ook alles aan om de klant overal bij te betrekken. Wij willen dat u weet waar wij op elk moment mee bezig zijn, zo willen wij ervoor zorgen dat een kleine verandering tijdig kan worden doorgegeven. Hiermee proberen wij een stuk klantvriendelijkheid te bieden en een stuk efficiëntie te winnen. Wij zijn telefonisch bereikbaar van Maandag t/m Vrijdag tussen 9:00 - 18:00. Via de mail zijn wij 24/7 te bereiken en reageren dan zo snel mogelijk.  
 
-       gedurende het ontwikkelingsproces krijgt u volledige inzage, u weet precies waar wij op elk moment mee bezig zijn en kunt zo nodig een verandering doorspelen. Hiermee hopen wij een stukje service aan u te bieden en daarnaast een stuk efficiëntie voor ons te winnen. <br><br>
-
-       Wij stellen het erg op prijs als een verandering tijdig wordt doorgegeven zodat de planning beter kan worden afgestemd. Mocht het zo zijn dat u op het allerlaatste moment toch nog een wijziging wilt doorvoeren dan stellen wij het zeer op prijs als direct telefonisch contact met ons gemaakt wordt. <br><br>
        </p>
 
 </div>
