--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,7 @@ function filterFunction() {
       <p><span class="glyphicon glyphicon-envelope" style="color: #4431a7;"></span> infosyncdevelopment@gmail.com</p>
     </div>
     
-      <form method="POST" action="myform">
+      <form method="POST" action="" id="myform">
       <div class="col-sm-7 slideanim">
       <div class="row">
         <div class="col-sm-6 form-group">
