--- a/meer-info.html
+++ b/meer-info.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+    <meta name="google-site-verification" content="_Caadk3b_zHgMnBdyoJwwNxwkCmqw82AZd81_8x_pq0" />
 <meta name="keywords" content="website, website maken, seo, developer,hoger in google, website bouwen, website, maken, website kopen, hosting, website laten bouwen, startende ondernemer, website development, sync, sync-development, goedkope website, ">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
