--- a/diensten.html
+++ b/diensten.html
@@ -96,11 +96,10 @@ function filterFunction() {
 </script>
 <br>  
     
-    <div class="bg-img1"></div>
+    <div class="bg-img1" title="Sync_development_Alphen_ad_Rijn_3_in_1_pakket"></div>
 
-   <a name="Pakketten"></a> 
   <div id="wrapper2">
-      <h1>Development Pakketten</h1>
+      <a name="Pakketten"></a> <h1>3 in 1 Development Pakketten voor de kleine ondernemer</h1>
       <hr>
        <p>Bij Sync development werken wij met 3 standaard pakketten.<br> Deze pakketten brengen ieder hun voordeel voor een bepaalde situatie naar voren, zie ieder pakket dus voornamelijk als een bouwplan. 
 </p>
