--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html>
 <head>
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107535912-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments)};
+  gtag('js', new Date());
+
+  gtag('config', 'UA-107535912-1');
+</script>
+
 <meta charset="UTF-8">
 
 <meta name="keywords" content="website, website maken, development, developer,contact, website, maps, website kopen, hosting, website laten bouwen, startende ondernemer, alphen aan den rijn, website development, sync, sync-development, goedkope website, goedkope websites, sites, SEO, vindbaarheid, betere vindbaarheid website, SEO, webhosting pakket">
