--- a/Sync_Development_Alphen_ad_Rijn_Meer_info.html
+++ b/Sync_Development_Alphen_ad_Rijn_Meer_info.html
@@ -59,20 +59,20 @@ $(document).ready(function(){
 <div class="collapse navbar-collapse navbar-responsive-collapse">
 <ul class="nav navbar-nav navbar-right">
 <li>
-<a  class="active2" href="home.html"><strong>Home</strong></a>
+<a  class="active2" href="Sync_Development_Alphen_ad_Rijn_Homepagina.html"><strong>Home</strong></a>
 </li>
 <li class="dropdown">
    
 <li>
- <a class="active2" href="diensten.html"><strong>Diensten</strong></a>
+ <a  class="active2" href="Sync_Development_Alphen_ad_Rijn_Diensten.html"><strong>Diensten</strong></a>
 </li>
-   
+
 <li>
-<a  class="active2" href="Werkwijze.html"><strong>Werkwijze</strong></a>
+<a  class="active2" href="Sync_Development_Alphen_ad_Rijn_Werkwijze.html"><strong>Werkwijze</strong></a>
 </li>
     
 <li>
-<a class="active2" href="contact.html"><strong>Contact</strong></a>
+<a  class="active2" href="Sync_Development_Alphen_ad_Rijn_Contact.html"><strong>Contact</strong></a>
  </li>
 </ul>
    <!--De class zort ervoor dat dit menu wordt gelinked met de animatie in de css-->
