--- a/Sync_Development_Alphen_ad_Rijn_Meer_info.html
+++ b/Sync_Development_Alphen_ad_Rijn_Meer_info.html
@@ -35,8 +35,8 @@
 <div class="container-fluid">
 <div class="navbar-header">
     <img class="flag2" src="images/netherlands-flag-round-icon-32.png">
-    <a href="home.html"><img class="logo" src="images/Sync_Development_Alphen_ad_Rijn_Logo.png"></a>
-    <a href="home.html"><img class="logomobile" src="images/Sync_Development_Alphen_ad_Rijn_Logo_icon_mobiel.png"></a>
+    <a href="Sync_Development_Alphen_ad_Rijn_Homepagina.html"><img class="logo" src="images/Sync_Development_Alphen_ad_Rijn_Logo.png"></a>
+    <a href="Sync_Development_Alphen_ad_Rijn_Homepagina.html"><img class="logomobile" src="images/Sync_Development_Alphen_ad_Rijn_Logo_icon_mobiel.png"></a>
 <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
 <div id="nav-icon3">
   <span></span>
