Home -> home.html

--- a/Sync_Development_Alphen_ad_Rijn_Contact.html
+++ b/Sync_Development_Alphen_ad_Rijn_Contact.html
@@ -40,8 +40,8 @@
 <div class="container-fluid">
 <div class="navbar-header">
     <img class="flag2" src="images/netherlands-flag-round-icon-32.png">
-    <a href="Home.html"><img class="logo" src="images/Sync_Development_Alphen_ad_Rijn_Logo.png"></a>
-    <a href="Home.html"><img class="logomobile" src="images/Sync_Development_Alphen_ad_Rijn_Logo_icon_mobiel.png"></a>
+    <a href="home.html"><img class="logo" src="images/Sync_Development_Alphen_ad_Rijn_Logo.png"></a>
+    <a href="home.html"><img class="logomobile" src="images/Sync_Development_Alphen_ad_Rijn_Logo_icon_mobiel.png"></a>
 <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
 <div id="nav-icon3">
   <span></span>
@@ -64,7 +64,7 @@ $(document).ready(function(){
 <div class="collapse navbar-collapse navbar-responsive-collapse">
 <ul class="nav navbar-nav navbar-right">
 <li>
-<a  class="active2" href="Home.html"><strong>Home</strong></a>
+<a  class="active2" href="home.html"><strong>Home</strong></a>
 </li>
 <li class="dropdown">
    
