--- a/Sync_Development_Alphen_ad_Rijn_Werkwijze.html
+++ b/Sync_Development_Alphen_ad_Rijn_Werkwijze.html
@@ -35,7 +35,7 @@
 <div class="navbar-header">
     <img class="flag2" src="images/netherlands-flag-round-icon-32.png">
     <a href="home.html"><img class="logo" src="images/Sync_Development_Alphen_ad_Rijn_Logo.png"></a>
-    <a href="home.html"><img class="logomobile" src="images/Sync_Development_Alphen_ad_Rijn_Logo_icon_mobiel.png"></a>
+    <a href="ome.html"><img class="logomobile" src="images/Sync_Development_Alphen_ad_Rijn_Logo_icon_mobiel.png"></a>
 <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
 <div id="nav-icon3">
   <span></span>
@@ -72,9 +72,13 @@ $(document).ready(function(){
 </li>
     
 <li>
-<a  class="active2" href="sync_development_alphen_ad_rijn_contact.html"><strong>Contact</strong></a>
+<a  class="active2" href="sync_Development_alphen_ad_rijn_contact.html"><strong>Contact</strong></a>
  </li>
 </ul>
+   <!--De class zort ervoor dat dit menu wordt gelinked met de animatie in de css-->
+</div>
+</div>
+</div>
     
 <script>
 /* When the user clicks on the button,
