--- a/Sync_Development_Alphen_ad_Rijn_Diensten.html
+++ b/Sync_Development_Alphen_ad_Rijn_Diensten.html
@@ -16,6 +16,7 @@
 <meta name="keywords" content="website, webpakketten, seo, promotie, developer, website, maken, website kopen, hosting, website laten bouwen, startende ondernemer, website development, goedkope website, goedkope websites, sites, vindbaarheid, betere vindbaarheid website, SEO, webhosting pakket">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Diensten | Sync-development</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
