--- a/Sync_Development_Alphen_ad_Rijn_Diensten.html
+++ b/Sync_Development_Alphen_ad_Rijn_Diensten.html
@@ -14,6 +14,7 @@
 <meta charset="UTF-8">
 
 <meta name="keywords" content="website, webpakketten, seo, promotie, developer, website, maken, website kopen, hosting, website laten bouwen, startende ondernemer, website development, goedkope website, goedkope websites, sites, vindbaarheid, betere vindbaarheid website, SEO, webhosting pakket">
+<meta name="description" content="Sync Development is gelokaliseerd in Alphen ad Rijn met het 3 in 1 pakket voor de startende ondernemer, Niet naar 3 verschillende bedrijven hoeven te gaan voor deze diensten no nonsense! - Onze aan te bieden pakketten!">    
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Diensten | Sync-development</title>
