--- a/Sync_Development_Alphen_ad_Rijn_Meer_info.html
+++ b/Sync_Development_Alphen_ad_Rijn_Meer_info.html
@@ -14,6 +14,7 @@
 <meta charset="UTF-8">
 
 <meta name="keywords" content="website, website maken, seo, developer,hoger in google, website bouwen, website, maken, website kopen, hosting, website laten bouwen, startende ondernemer, website development, sync, sync-development, goedkope website, ">
+<meta name="description" content="Sync Development is gelokaliseerd in Alphen ad Rijn met het 3 in 1 pakket voor de startende ondernemer, Niet naar 3 verschillende bedrijven hoeven te gaan voor deze diensten no nonsense! - Meer informatie over de pakketten">    
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Meer-info | Sync-development</title>
