--- a/Sync_Development_Alphen_ad_Rijn_Contact.html
+++ b/Sync_Development_Alphen_ad_Rijn_Contact.html
@@ -14,6 +14,7 @@
 <meta charset="UTF-8">
 
 <meta name="keywords" content="website, website maken, development, developer,contact, website, maps, website kopen, hosting, website laten bouwen, startende ondernemer, alphen aan den rijn, website development, sync, sync-development, goedkope website, goedkope websites, sites, SEO, vindbaarheid, betere vindbaarheid website, SEO, webhosting pakket">
+<meta name="description" content="Sync Development is gelokaliseerd in Alphen ad Rijn met het 3 in 1 pakket voor de startende ondernemer, Niet naar 3 verschillende bedrijven hoeven te gaan voor deze diensten no nonsense! - Neem contact met ons op!">    
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Contact | Sync-development</title>
