--- a/Sync_Development_Alphen_ad_Rijn_Meer_info.html
+++ b/Sync_Development_Alphen_ad_Rijn_Meer_info.html
@@ -245,7 +245,7 @@ function filterFunction() {
       <p><img class="flag" src="images/netherlands-flag-round-icon-32.png">© 2017 - Sync-development</p>
      <ul class="footer-social1">
           <li><i class="fa fa-linkedin social-icon linked-in" aria-hidden="true"></i></li>
-          <li><i class="fa fa-facebook social-icon facebook" aria-hidden="true"></i></li>
+          <li><a target="_blank" href="https://www.facebook.com/Sync-development-168404903738785/"><i class="fa fa-facebook social-icon facebook" aria-hidden="true"></i></li>
           <li><i class="fa fa-twitter social-icon twitter" aria-hidden="true"></i></li>
           <li><i class="fa fa-google-plus social-icon google" aria-hidden="true"></i></li>
         </ul>
