--- a/Sync_Development_Alphen_ad_Rijn_Werkwijze.html
+++ b/Sync_Development_Alphen_ad_Rijn_Werkwijze.html
@@ -16,7 +16,7 @@
 <meta name="keywords" content="website, website maken, development, developer,hoger in google,website bouwen, website, maken, website kopen, hosting, website laten bouwen, startende ondernemer, alphen aan den rijn, website development, sync,">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Werkwijze Sync-development</title>
+<title>Werkwijze | Sync-development</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -247,7 +247,7 @@ function filterFunction() {
       <p><img class="flag" src="images/netherlands-flag-round-icon-32.png">© 2017 - Sync-development</p>
      <ul class="footer-social1">
           <li><i class="fa fa-linkedin social-icon linked-in" aria-hidden="true"></i></li>
-          <li><i class="fa fa-facebook social-icon facebook" aria-hidden="true"></i></li>
+          <li><a target="_blank" href="https://www.facebook.com/Sync-development-168404903738785/"><i class="fa fa-facebook social-icon facebook" aria-hidden="true"></i></li>
           <li><i class="fa fa-twitter social-icon twitter" aria-hidden="true"></i></li>
           <li><i class="fa fa-google-plus social-icon google" aria-hidden="true"></i></li>
         </ul>
