--- a/Home.html
+++ b/Home.html
@@ -325,7 +325,7 @@ function filterFunction() {
         <h6 class="heading7">Social Media</h6>
         <ul class="footer-social">
           <li><i class="fa fa-linkedin social-icon linked-in" aria-hidden="true"></i></li>
-          <li><i class="fa fa-facebook social-icon facebook" aria-hidden="true"></i></li>
+          <li><a target="_blank" href="https://www.facebook.com/Sync-development-168404903738785/"> <i class="fa fa-facebook social-icon facebook" aria-hidden="true"></i></li>
           <li><i class="fa fa-twitter social-icon twitter" aria-hidden="true"></i></li>
           <li><i class="fa fa-google-plus social-icon google" aria-hidden="true"></i></li>
         </ul>
