--- a/sync_development_alphen_aan_den_rijn_diensten.html
+++ b/sync_development_alphen_aan_den_rijn_diensten.html
@@ -13,7 +13,7 @@
 
 <meta charset="UTF-8">
 
-<meta name="keywords" content="website, webpakketten, seo, promotie, developer, website, maken, website kopen, hosting, website laten bouwen, startende ondernemer, website development, goedkope website, goedkope websites, sites, vindbaarheid, betere vindbaarheid website, SEO, webhosting pakket">
+<meta name="keywords" content="waddinxveen website, website stijling, alphen website, gouda website, leiden website, website, website bouwen, goedkoop website, snel website, mobiel">
 <meta name="description" content="Sync Development is gelokaliseerd in Alphen ad Rijn met het 3 in 1 pakket voor de startende ondernemer, Niet naar 3 verschillende bedrijven hoeven te gaan voor deze diensten no nonsense! - Onze aan te bieden pakketten!">    
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -67,15 +67,15 @@ $(document).ready(function(){
 <li class="dropdown">
    
 <li>
- <a  class="active2" href="sync_development_alphen_ad_rijn_diensten.html"><strong>Diensten</strong></a>
+ <a  class="active2" href="sync_development_alphen_aan_den_rijn_diensten.html"><strong>Diensten</strong></a>
 </li>
 
 <li>
-<a  class="active2" href="sync_development_alphen_ad_rijn_werkwijze.html"><strong>Werkwijze</strong></a>
+<a  class="active2" href="sync_development_alphen_aan_den_rijn_werkwijze.html"><strong>Werkwijze</strong></a>
 </li>
     
 <li>
-<a  class="active2" href="sync_development_alphen_ad_rijn_contact.html"><strong>Contact</strong></a>
+<a  class="active2" href="sync_development_alphen_aan_den_rijn_contact.html"><strong>Contact</strong></a>
  </li>
 </ul>
    <!--De class zort ervoor dat dit menu wordt gelinked met de animatie in de css-->
@@ -168,7 +168,7 @@ function filterFunction() {
                     </table>
                 </div>
                 <div class="panel-footer">
-                    <a href="sync_development_alphen_ad_rijn_meer_info.html" class="btn btn-success" role="button">Meer info</a>
+                    <a href="sync_development_alphen_aan_den_rijn_meer_info.html" class="btn btn-success" role="button">Meer info</a>
                    </div>
             </div>
         </div>
@@ -215,7 +215,7 @@ function filterFunction() {
                     </table>
                 </div>
                 <div class="panel-footer">
-                    <a href="sync_development_alphen_ad_rijn_meer_info.html" class="btn btn-success" role="button">Meer info</a>
+                    <a href="sync_development_alphen_aan_den_rijn_meer_info.html" class="btn btn-success" role="button">Meer info</a>
                     </div>
             </div>
         </div>
@@ -259,7 +259,7 @@ function filterFunction() {
                     </table>
                 </div>
                 <div class="panel-footer">
-                    <a href="sync_development_alphen_ad_rijn_meer_info.html" class="btn btn-success" role="button">Meer info</a> </div>
+                    <a href="sync_development_alphen_aan_den_rijn_meer_info.html" class="btn btn-success" role="button">Meer info</a> </div>
             </div>
         </div>
     </div>
@@ -378,7 +378,7 @@ function filterFunction() {
       <p><img class="flag" src="images/netherlands-flag-round-icon-32.png">© 2017 - Sync-development</p>
      <ul class="footer-social1">
           <li><i class="fa fa-linkedin social-icon linked-in" aria-hidden="true"></i></li>
-          <li><a target="_blank" href="https://www.facebook.com/Sync-development-168404903738785/"><i class="fa fa-facebook social-icon facebook" aria-hidden="true"></i></li>
+          <li><i class="fa fa-facebook social-icon facebook" aria-hidden="true"></i></li>
           <li><i class="fa fa-twitter social-icon twitter" aria-hidden="true"></i></li>
           <li><i class="fa fa-google-plus social-icon google" aria-hidden="true"></i></li>
         </ul>
