--- a/sync_development_alphen_aan_den_rijn_contact.html
+++ b/sync_development_alphen_aan_den_rijn_contact.html
@@ -13,7 +13,7 @@
 
 <meta charset="UTF-8">
 
-<meta name="keywords" content="website, website maken, development, developer,contact, website, maps, website kopen, hosting, website laten bouwen, startende ondernemer, alphen aan den rijn, website development, sync, sync-development, goedkope website, goedkope websites, sites, SEO, vindbaarheid, betere vindbaarheid website, SEO, webhosting pakket">
+<meta name="keywords" content="waddinxveen website, website stijling, alphen website, gouda website, leiden website, website, website bouwen, goedkoop website, snel website, mobiel">
 <meta name="description" content="Sync Development is gelokaliseerd in Alphen ad Rijn met het 3 in 1 pakket voor de startende ondernemer, Niet naar 3 verschillende bedrijven hoeven te gaan voor deze diensten no nonsense! - Neem contact met ons op!">    
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -71,15 +71,15 @@ $(document).ready(function(){
 <li class="dropdown">
    
 <li>
- <a  class="active2" href="sync_development_alphen_ad_rijn_diensten.html"><strong>Diensten</strong></a>
+ <a  class="active2" href="sync_development_alphen_aan_den_rijn_diensten.html"><strong>Diensten</strong></a>
 </li>
 
 <li>
-<a  class="active2" href="sync_development_alphen_ad_rijn_werkwijze.html"><strong>Werkwijze</strong></a>
+<a  class="active2" href="sync_development_alphen_aan_den_rijn_werkwijze.html"><strong>Werkwijze</strong></a>
 </li>
     
 <li>
-<a  class="active2" href="sync_development_alphen_ad_rijn_contact.html"><strong>Contact</strong></a>
+<a  class="active2" href="sync_development_alphen_aan_den_rijn_contact.html"><strong>Contact</strong></a>
  </li>
 </ul>
 
@@ -243,7 +243,7 @@ function filterFunction() {
       <p><img class="flag" src="images/netherlands-flag-round-icon-32.png">© 2017 - Sync-development</p>
      <ul class="footer-social1">
           <li><i class="fa fa-linkedin social-icon linked-in" aria-hidden="true"></i></li>
-          <li><a target="_blank" href="https://www.facebook.com/Sync-development-168404903738785/"> <i class="fa fa-facebook social-icon facebook" aria-hidden="true"></i></li>
+          <li><i class="fa fa-facebook social-icon facebook" aria-hidden="true"></i></li>
           <li><i class="fa fa-twitter social-icon twitter" aria-hidden="true"></i></li>
           <li><i class="fa fa-google-plus social-icon google" aria-hidden="true"></i></li>
         </ul>
