--- a/Home.html
+++ b/Home.html
@@ -172,8 +172,7 @@ function filterFunction() {
       <h1>Het 3 in 1 on-line pakket  voor de kleine ondernemer</h1>
       <hr>
       <p>
-          Wij begrijpen dat u als startende ondernemer een hoop dingen moet regelen, een website is 1 van die dingen. Wij bieden een pakket aan wat ervoor zorgt dat u snel en goedkoop een goede website online heeft. In dit pakket zijn 3 diensten vernoemd die samen een gegarandeerde sterke basis leggen voor uw website. U heeft echter de complete vrijheid deze diensten los te gebruiken, want wij weten dat niet iedere ondernemer dezelfde diensten nodig heeft.
-          Wij snappen als geen ander dat een startende ondernemer niet naar 3 verschillende bedrijven toe wilt voor zijn website. Daarom maken wij het simpel voor u, en leveren alle diensten in 1 bedrijf, No nonsense. <br><br>
+          Zoekt u een goedkope website die aan al uw eisen voldoet? Wilt u niet te ver reizen voor een afspraak? Zoek dan niet verder want wij zitten erg dicht bij u in de buurt! Sync development biedt niet alleen diensten aan om uw website te maken, wij kunnen ook content en promotiemateriaal aanbieden. Het 3 in 1 online pakket voorziet u van alle diensten die denkbaar zijn bij een website. Al onze websites zijn automatisch geschikt voor ieder device, en heel goed vindbaar. <br><br>
         </p>     
         
           <h1>Seo</h1>
