social media tags

--- a/website_laten_maken_alphen_aan_den_rijn.html
+++ b/website_laten_maken_alphen_aan_den_rijn.html
@@ -166,8 +166,8 @@ function filterFunction() {
       <div class="col-md-3 col-sm-6 footer-col">
         <h6 class="heading7">Social Media</h6>
         <ul class="footer-social">
-          <li><i class="fa fa-linkedin social-icon linked-in" aria-hidden="true"></i></li>
-          <li><i class="fa fa-facebook social-icon facebook" aria-hidden="true"></i></li>
+          <li> <a target="_blank" href="https://www.linkedin.com/company/25033050/"><i class="fa fa-linkedin social-icon linked-in" aria-hidden="true"></i></li>
+          <li> <a target="_blank" href="https://www.facebook.com/sync4webdevelopment/"><i class="fa fa-facebook social-icon facebook" aria-hidden="true"></i></li>
           <li><i class="fa fa-twitter social-icon twitter" aria-hidden="true"></i></li>
           <li><i class="fa fa-google-plus social-icon google" aria-hidden="true"></i></li>
         </ul>
@@ -184,8 +184,8 @@ function filterFunction() {
   
     <p>   <img class="flag" src="images/netherlands-flag-round-icon-32.png">© 2017 - Sync-development </p>
      <ul class="footer-social1">
-          <li><i class="fa fa-linkedin social-icon linked-in" aria-hidden="true"></i></li>
-          <li><i class="fa fa-facebook social-icon facebook" aria-hidden="true"></i></li>
+          <li> <a target="_blank" href="https://www.linkedin.com/company/25033050/"><i class="fa fa-linkedin social-icon linked-in" aria-hidden="true"></i></li>
+          <li> <a target="_blank" href="https://www.facebook.com/sync4webdevelopment/"><i class="fa fa-facebook social-icon facebook" aria-hidden="true"></i></li>
           <li><i class="fa fa-twitter social-icon twitter" aria-hidden="true"></i></li>
           <li><i class="fa fa-google-plus social-icon google" aria-hidden="true"></i></li>
         </ul>
