Contact.html -> Contact.php

--- a/sync_development_alphen_aan_den_rijn_diensten.html
+++ b/sync_development_alphen_aan_den_rijn_diensten.html
@@ -75,7 +75,7 @@ $(document).ready(function(){
 </li>
     
 <li>
-<a  class="active2" href="sync_development_alphen_aan_den_rijn_contact.html"><strong>Contact</strong></a>
+<a  class="active2" href="sync_development_alphen_aan_den_rijn_contact.php"><strong>Contact</strong></a>
  </li>
 </ul>
    <!--De class zort ervoor dat dit menu wordt gelinked met de animatie in de css-->
