tekst aangepast meer info pagina

--- a/sync_development_alphen_aan_den_rijn_meer_info.html
+++ b/sync_development_alphen_aan_den_rijn_meer_info.html
@@ -129,7 +129,8 @@ function filterFunction() {
 
              <h2>Premium Pakket</h2>
                <hr>
-                  <p>Bij het standaard pakket leveren wij alle diensten die noodzakelijk zijn om een goede website te maken voor een zo laag mogelijke prijs. Het basispakket is zeer geschikt voor de kleine ondernemer die een gewoon goede website wilt.</p> <br>
+                  <p>Het premium pakket is bedoeld voor de ondernemer die een website wilt waarin ook aan elementen zoals de styling worden gewerkt. U kunt de styling volledig uit handen geven maar dit hoeft niet, wij kunnen uiteraard ook een adviserende rol spelen tijdens het ontwikkelingsproces. Verder krijgt u promotiemateriaal voor op social media en wordt de meest uitgebreide vorm van SEO toegepast op uw website. In dit pakket zijn de volgende diensten inbegrepen: Webdevelopment, Webhosting, Domeinnaam, SEO++, Promotiemateriaal en Styling.   
+</p> <br>
 
  
          </div>
