--- a/website_laten_maken_leiden.html
+++ b/website_laten_maken_leiden.html
@@ -139,7 +139,7 @@ function filterFunction() {
       <div class="col-md-3 col-sm-6 footer-col">
         <div class="logofooter"> Contact </div>
         <p>Wij zijn telefonisch te bereiken van ma t/m vr van 09:00 - 18:00.</p>
-        <p><i class="fa fa-map-pin"></i> Antonie van Leeuwenhoekweg 14, Alphen aan den rijn</p>
+        <p><i class="fa fa-map-pin"></i> Antonie van Leeuwenhoekweg 14, Alphen aan den Rijn</p>
         <p><i class="fa fa-phone"></i> Tel: 0611129593</p>
         <p><i class="fa fa-envelope"></i> E-mail: infosyncdevelopment@gmail.com</p>
         
