--- a/sync_development_alphen_aan_den_rijn_werkwijze.html
+++ b/sync_development_alphen_aan_den_rijn_werkwijze.html
@@ -37,7 +37,7 @@
 <div class="navbar-header">
     <img class="flag2" src="images/netherlands-flag-round-icon-32.png">
     <a href="home.html"><img class="logo" src="images/Sync_Development_Alphen_ad_Rijn_Logo.png"></a>
-    <a href="ome.html"><img class="logomobile" src="images/Sync_Development_Alphen_ad_Rijn_Logo_icon_mobiel.png"></a>
+    <a href="home.html"><img class="logomobile" src="images/Sync_Development_Alphen_ad_Rijn_Logo_icon_mobiel.png"></a>
 <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
 <div id="nav-icon3">
   <span></span>
