--- a/sync_development_alphen_aan_den_rijn_werkwijze.html
+++ b/sync_development_alphen_aan_den_rijn_werkwijze.html
@@ -146,7 +146,7 @@ function filterFunction() {
 
   <br><br><br><br><br>
  <div class="container">
-<div class="row">      
+ <a name="SEO"></a><div class="row">      
 <h1>Bestaande websites voorzien van SEO en/of onderhoud</h1>
 <hr>
 <p>Heeft u een bestaande website die een update kan gebruiken of een website die een boost in de performance kan gebruiken? Zoek dan niet verder en vraag bij ons een offerte aan. Sync-development biedt externe diensten aan zoals het onderhouden en het updaten van bestaande websites voor een scherpe prijs.
@@ -161,7 +161,7 @@ function filterFunction() {
   
     <section class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
           <img class="icon" src="images/Sync_Development_Alphen_ad_Rijn_Seo.png" width="50" alt="Sync_development_Alphen_ad_Rijn_Seo_toevoegen">
-          <h3>Seo</h3>
+          <h3>SEO</h3>
           <p>SEO op een bestaande website toepassen of de SEO up uw website optimaliseren is bij ons een mogelijkheid. Ook hier verrichten wij eerst onderzoek naar de code en bijbehorende documentatie van uw website. Het is voor ons cruciaal om eerst te zien hoe uw website in elkaar steekt voordat wij een prijsindicatie kunnen geven. Daarnaast stellen wij ook vast wat de SEO score voor en na de optimalisatie is zodat u het resultaat kunt zien.</p>
 </section>
     
