--- a/sync_development_alphen_aan_den_rijn_diensten.html
+++ b/sync_development_alphen_aan_den_rijn_diensten.html
@@ -168,7 +168,7 @@ function filterFunction() {
                     </table>
                 </div>
                 <div class="panel-footer">
-                    <a href="sync_development_alphen_aan_den_rijn_meer_info.html" class="btn btn-success" role="button">Meer info</a>
+                    <a href="sync_development_alphen_aan_den_rijn_meer_info.html" class="btn btn-info" role="button">Meer info</a>
                    </div>
             </div>
         </div>
@@ -215,7 +215,7 @@ function filterFunction() {
                     </table>
                 </div>
                 <div class="panel-footer">
-                    <a href="sync_development_alphen_aan_den_rijn_meer_info.html" class="btn btn-success" role="button">Meer info</a>
+                    <a href="sync_development_alphen_aan_den_rijn_meer_info.html" class="btn btn-info" role="button">Meer info</a>
                     </div>
             </div>
         </div>
@@ -259,7 +259,7 @@ function filterFunction() {
                     </table>
                 </div>
                 <div class="panel-footer">
-                    <a href="sync_development_alphen_aan_den_rijn_meer_info.html" class="btn btn-success" role="button">Meer info</a> </div>
+                    <a href="sync_development_alphen_aan_den_rijn_meer_info.html" class="btn btn-info" role="button">Meer info</a> </div>
             </div>
         </div>
     </div>
