--- a/website_laten_maken_leiden.html
+++ b/website_laten_maken_leiden.html
@@ -13,7 +13,7 @@
 
 <meta charset="UTF-8">
 
-<meta name="keywords" content="waddinxveen website, website stijling, alphen website, gouda website, leiden website, website, website bouwen, goedkoop website, snel website, mobiel">
+<meta name="keywords" content="leiden website, website stijling, goedkoop website, website bouwen, leiden stijling, leiden goedkoop website, snel website, mobiel, applicatie">
 <meta name="description" content="Sync Development is gelokaliseerd in Alphen ad Rijn met het 3 in 1 pakket voor de startende ondernemer, Op zoek naar een website rond Leiden? Bij ons bent u bij het juiste adres!">     
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
