--- a/sync_development_alphen_aan_den_rijn_diensten.html
+++ b/sync_development_alphen_aan_den_rijn_diensten.html
@@ -363,6 +363,10 @@ function filterFunction() {
           <li><i class="fa fa-google-plus social-icon google" aria-hidden="true"></i></li>
         </ul>
       </div>
+              <div class="col-md-3 col-sm-6 footer-col">
+ </div> 
+      </div>
+      </div>
     </div>
   </div>
 </footer>
