--- a/sync_development_alphen_aan_den_rijn_werkwijze.html
+++ b/sync_development_alphen_aan_den_rijn_werkwijze.html
@@ -235,6 +235,8 @@ function filterFunction() {
           <li><i class="fa fa-google-plus social-icon google" aria-hidden="true"></i></li>
         </ul>
       </div>
+        <div class="col-md-3 col-sm-6 footer-col">
+      </div>
     </div>
   </div>
 </footer>
