--- a/website_laten_maken_boskoop.html
+++ b/website_laten_maken_boskoop.html
@@ -172,6 +172,11 @@ function filterFunction() {
           <li><i class="fa fa-google-plus social-icon google" aria-hidden="true"></i></li>
         </ul>
       </div>
+            <div class="col-md-3 col-sm-6 footer-col">
+          <div class="likeknop">
+<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fsync4webdevelopment%2F&width=112&layout=button_count&action=like&size=small&show_faces=true&share=true&height=46&appId" width="150" height="46" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+ </div> 
+      </div>
     </div>
   </div>
 </footer>
