--- a/sync_development_alphen_aan_den_rijn_werkwijze.html
+++ b/sync_development_alphen_aan_den_rijn_werkwijze.html
@@ -146,7 +146,7 @@ function filterFunction() {
 
   <br><br><br><br><br>
  <div class="container">
- <a name="SEO"></a><div class="row">      
+ <a name="seo"></a><div class="row">      
 <h1>Bestaande websites voorzien van SEO en/of onderhoud</h1>
 <hr>
 <p>Heeft u een bestaande website die een update kan gebruiken of een website die een boost in de performance kan gebruiken? Zoek dan niet verder en vraag bij ons een offerte aan. Sync-development biedt externe diensten aan zoals het onderhouden en het updaten van bestaande websites voor een scherpe prijs.
