--- a/sync_development_alphen_aan_den_rijn_diensten.html
+++ b/sync_development_alphen_aan_den_rijn_diensten.html
@@ -112,7 +112,8 @@ function filterFunction() {
     <div class="bg-img1" title="Sync_development_Alphen_ad_Rijn_3_in_1_pakket"></div>
 
   <div id="wrapper2">
-      <a name="pakketten"></a> <h1>3 in 1 Development Pakketten voor de kleine ondernemer</h1>
+      <div id="pakketten"></div>
+      <h1>3 in 1 Development Pakketten voor de kleine ondernemer</h1>
       <hr>
        <p>Bij Sync development werken wij met 3 standaard pakketten.<br> Deze pakketten brengen ieder hun voordeel voor een bepaalde situatie naar voren, zie ieder pakket dus voornamelijk als een bouwplan. 
 </p>
