--- a/sync_development_alphen_aan_den_rijn_werkwijze.html
+++ b/sync_development_alphen_aan_den_rijn_werkwijze.html
@@ -109,10 +109,10 @@ function filterFunction() {
 <div class="bg-img5"  title="Sync_development_Alphen_ad_Rijn_de_werkwijze"></div>
     
 <div id="wrapper2">
-<div class="container">
+<div class="container" id="werkwijze">
 <div class="row">   
 
-    <a name="werkwijze"></a><h1>Werkwijze van Sync Development</h1>
+    <h1>Werkwijze van Sync Development</h1>
     <hr>
       <p>     
           Wij bij Sync-development willen op alle mogelijke manieren onze klanten tegemoet komen, daarom maken wij van tevoren duidelijke afspraken over het ontwikkelingsproces. Nu verloopt natuurlijk niet ieder proces hetzelfde, maar er is wel sprake van een basisprincipe dat altijd terugkomt. Hieronder ziet u hoe het bij ons in z’n werk gaat.<br><br>
@@ -145,8 +145,8 @@ function filterFunction() {
       </div>
 
   <br><br><br><br><br>
- <div class="container">
- <a name="seo"></a><div class="row">      
+ <div class="container" id="seo">
+<div class="row">      
 <h1>Bestaande websites voorzien van SEO en/of onderhoud</h1>
 <hr>
 <p>Heeft u een bestaande website die een update kan gebruiken of een website die een boost in de performance kan gebruiken? Zoek dan niet verder en vraag bij ons een offerte aan. Sync-development biedt externe diensten aan zoals het onderhouden en het updaten van bestaande websites voor een scherpe prijs.
