--- a/Home.html
+++ b/Home.html
@@ -260,7 +260,7 @@ function filterFunction() {
 
                 
       <section class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-            <a href="sync_development_alphen_aan_den_rijn_diensten.html #pakketten">
+            <a href="sync_development_alphen_aan_den_rijn_diensten.html" "#pakketten">
             <img border="0" alt="Pakketten" src="images/Sync_Development_Alphen_ad_Rijn_Pakketten.png" width="80" height="80"></a>
            <h3>Pakketten</h3>
           <hr>
