--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@ function filterFunction() {
         </div>
         <!-- Carousel controls -->
         <a class="carousel-control left" href="#myCarousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="glyphicon-chevron-left"></span>
         </a>
         <a class="carousel-control right" href="#myCarousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="glyphicon-chevron-right"></span>
         </a>
     </div>
 </div>
